Change config + create ModMenu screen config

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	fabric_version=0.47.8+1.18.2
-	oro_version=3.1.0
+	modmenu_version=3.1.1
+	cloth_config_version=6.2.57
