--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,18 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
-	mavenCentral()
+	maven { url 'https://jitpack.io' }
+
+	// Needed to retrieve Cloth Config Lite for Omega Config in development environments.
+	maven {
+		name = "Shedaniel's Maven"
+		url = "https://maven.shedaniel.me/"
+	}
+
+	maven {
+		name = "TerraformersMC"
+		url = "https://maven.terraformersmc.com/releases/"
+	}
 }
 
 dependencies {
@@ -28,8 +39,10 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modImplementation "com.oroarmor:oro-config-fabric:${project.oro_version}"
-	include "com.oroarmor:oro-config-fabric:${project.oro_version}"
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	modImplementation ("com.terraformersmc:modmenu:${project.modmenu_version}")
 }
 
 processResources {
