--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.1
-	loader_version=0.13.3
+	minecraft_version=1.19
+	yarn_mappings=1.19+build.4
+	loader_version=0.14.8
 
 # Mod Properties
-	mod_version = 1.0.1
+	mod_version = 1.0.1_1.19
 	maven_group = ovh.feelzor
 	archives_base_name = fleeinganimals
 
 # Dependencies
-	fabric_version=0.47.8+1.18.2
-	modmenu_version=3.1.1
-	cloth_config_version=6.2.57
+	fabric_version=0.57.0+1.19
+	modmenu_version=4.0.0
+	cloth_config_version=7.0.72
